--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "taro-uilib-react",
+  "name": "lwj-mobile-ui",
   "version": "0.0.1",
   "browser": "dist/index.umd.js",
   "module": "dist/index.esm.js",
   "main": "dist/index.js",
   "source": "src/index.ts",
-  "description": "Taro UI 库 React 版本范例",
+  "description": "lwj mobile ui",
   "types": "types/index.d.ts",
   "files": [
     "lib",
