--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,8 +6,8 @@
     "jsxFactory": "React.createElement",
     "moduleResolution": "node",
     "noImplicitAny": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "preserveConstEnums": true,
     "skipLibCheck": true,
     "sourceMap": true,
