--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "jsxFactory": "React.createElement",
     "moduleResolution": "node",
     "noImplicitAny": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "preserveConstEnums": true,
     "skipLibCheck": true,
     "sourceMap": true,
@@ -25,5 +25,6 @@
   "exclude": [
     "node_modules/*",
     "dist/*"
-  ]
+  ],
+
 }
