--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:ci": "yarn run build:h5 && yarn run test",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "clean": "rimraf .temp dist lib coverage",
-    "storybook": "start-storybook -p 6006 -s public",
+    "storybook": "yarn build:rollup-h5 && start-storybook -p 6006 -s public",
     "build-storybook": "yarn build:rollup-h5 && build-storybook"
   },
   "keywords": [
