chore: import image config & image asset

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": "./",
     "typeRoots": [
       "node_modules/@types",
-      "types"
+      "types",
+      "src/declaration.d.ts"
     ]
   },
   "compileOnSave": false,
