--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/core": "^7.14.0",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
     "@storybook/addon-actions": "6.0.28",
