--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "dependencies": {
     "@tarojs/components": "^3.0.8",
     "@tarojs/react": "^3.0.8",
+    "classnames": "^2.3.1",
     "taro-ui": "3.0.0-alpha.10"
   }
 }
