--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "types"
   ],
   "scripts": {
-    "dev": "yarn run dev:lib",
+    "dev": "rollup --config ./rollup.config.js -w",
     "dev:lib": "tsc --project ./tsconfig.build.json --watch --incremental",
     "dev:rollup-h5": "rollup --config ./rollup-h5.config.js -w",
     "build": "yarn run build:rollup && yarn run build:lib",
