--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.0",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-typescript": "^7.14.5",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-image": "^2.0.6",
@@ -48,12 +49,17 @@
     "@storybook/addon-essentials": "6.0.28",
     "@storybook/addon-links": "6.0.28",
     "@storybook/react": "6.0.28",
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^2.x",
     "@typescript-eslint/parser": "^2.x",
     "babel-loader": "^8.2.2",
+    "babel-preset-taro": "^3.3.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.2.0",
     "eslint-config-taro": "^3.0.8",
